--- a/Zadatak/pom.xml
+++ b/Zadatak/pom.xml
@@ -3,7 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.tpuhalo</groupId>
-	<artifactId>zadatak</artifactId>
+	<artifactId>zadatak</artifactId>	
+	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>zadatak</name>
 	<build>
